<resources>
    <string name="app_name">Book List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="book_title">Title: </string>
    <string name="book_title_hint">Alice\'s World</string>
    <string name="book_description">Description: </string>
    <string name="book_description_hint">Wonderful World</string>
    <string name="book_add">Add Book</string>
    <string name="book_clear_list">Clear book list</string>
    <string name="clear_books_alert_title">Delete all books</string>
    <string name="clear_books_alert_message">This action will remove all of your books. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="books_deleted_message">Books deleted!</string>
    <string name="book_added_message">Book added successfully!</string>
    <string name="validation_book_title">Title field is required!</string>
    <string name="validation_book_description">Description field is required!</string>
</resources>
