<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:gravity="end"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/book_edt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_title_hint"
            android:inputType="text|textAutoComplete|textCapWords"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            android:gravity="end"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/book_edt_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_description_hint"
            android:inputType="text|textAutoComplete"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_add"
            android:onClick="buttonAddBook"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:onClick="buttonCancel"/>

    </LinearLayout>


</LinearLayout>